# lab4-csa

./: .gitignore  ARCHITECTURE.md  MICROCODE.md  Makefile  README.md  cache.py  conftest.py  golden_test.py  isa.py  machine.py  microcode.py  pyproject.toml  test_cache.py  test_machine.py  translator.py
.github/workflows/: ci.yml
examples/: cache_demo.fth  cat.fth  double_precision.fth  execute_demo.fth  hello_user_name.fth  prob1.fth  sort.fth
golden/: cache_demo.yml  cat.yml  double_precision.yml  execute_demo.yml  hello.yml  hello_user_name.yml  prob1.yml  sort.yml
scripts/: measure_algorithms.py  normalize_goldens.py
